tabbed group/knockout buttons

--- a/tabs.css
+++ b/tabs.css
@@ -58,3 +58,9 @@
         .tab.active {
             display:block;
         }
+        
+    /*----- Tabbed buttons -----*/
+    
+    .tabbed-buttons div {
+    	display:none;
+    }
