--- a/world_cup.css
+++ b/world_cup.css
@@ -75,3 +75,16 @@
     content:"";
     clear:both;   
 }
+
+/*.flag-cropper {
+	display:inline-block;
+	position: relative;
+	width: 24px;
+	height: 19px;
+	overflow: hidden;
+}*/
+
+.flag {
+	/*top:-50%;
+	left:-50%;*/
+}
