--- a/world_cup.css
+++ b/world_cup.css
@@ -7,10 +7,22 @@ body {
 	src: url('brasil2014.otf') format('opentype');
 }
 
-header,h1,p {
+#header,h1,p {
 	margin:0;
 	padding:0;
 	font-family:"Brasil2014";
+}
+
+#header {
+	position: relative;
+}
+
+#tzwrapper {
+	position: absolute;
+	top: 50%;
+	-webkit-transform: translate(0%,-50%);
+	-ms-transform: translate(0%,-50%);
+	transform: translate(0%,-50%);
 }
 
 h1 {
@@ -74,6 +86,7 @@ h1 {
     width:55%;
     margin-left:auto;
     margin-right:auto;
+    padding: 10;
 }
 
 .matchRow::after {
@@ -105,10 +118,6 @@ h1 {
 
 .groupTable table {
 	margin:0 auto;
-}
-
-.matchRow {
-	padding: 10;
 }
 
 .location {
