--- a/world_cup.css
+++ b/world_cup.css
@@ -248,6 +248,7 @@ td {
 .champion p {
 		text-shadow:1px 1px 2px #FFD700, -1px 1px 2px #FFD700, 1px -1px 2px #FFD700, -1px -1px 2px #FFD700;
 		ms-filter: progid:DXImageTransform.Microsoft.Glow(color=#FFD700, strength=1);
+		margin:0px;
 }
 
 /*
