--- a/world_cup.css
+++ b/world_cup.css
@@ -169,6 +169,11 @@ td {
 	vertical-align:middle;
 }
 
+.flagwrap {
+	width:24px;
+	text-align:center;
+}
+
 .clinched {
 	background:#ccffcc;
 }
@@ -251,6 +256,28 @@ td {
 		margin:0px;
 }
 
+.matches {
+	margin-bottom:10px;
+}
+
+th {
+			background: rgba(243,243,243,1);
+			background: -moz-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 100%);
+			background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(243,243,243,1)), color-stop(100%, rgba(191,193,194,1)));
+			background: -webkit-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 100%);
+			background: -o-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 100%);
+			background: -ms-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 100%);
+			background: linear-gradient(to bottom, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 100%);
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3f3f3', endColorstr='#bfc1c2', GradientType=0 );
+}
+
+.groupTable tr > th:first-child {
+			border-radius:6px 0px 0px 0px;
+}
+
+.groupTable tr > th:last-child {
+			border-radius:0px 6px 0px 0px;
+}
 /*
 td span {
 	vertical-align:middle;
