--- a/world_cup.css
+++ b/world_cup.css
@@ -32,7 +32,6 @@ h1 {
 	color: red;
 }
 
-
 .border {
 	position: fixed;
 	width: auto;
@@ -67,6 +66,14 @@ h1 {
 	max-width: 19.726%
 	max-height: 30.502%
 }
+
+/*hr {
+	height:5px;
+	margin:-5px 0px 0px 0px;
+	color: #ACACAC;
+	background-color:#ACACAC;
+	border-width:0px;
+}*/
 
 .team1 {
     float: left;
@@ -127,7 +134,7 @@ td.details {
 	position:relative;
 	height:30px;
 	/*border-spacing:0px;*/
-	border-top: 1px solid #CCC;
+	border-top: 1px solid #ACACAC;
 }
 
 .groupTable td, .groupTable div {
@@ -276,14 +283,16 @@ td {
 }
 
 th {
-			background: rgba(243,243,243,1);
-			background: -moz-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 100%);
-			background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(243,243,243,1)), color-stop(100%, rgba(191,193,194,1)));
-			background: -webkit-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 100%);
-			background: -o-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 100%);
-			background: -ms-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 100%);
-			background: linear-gradient(to bottom, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 100%);
-			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3f3f3', endColorstr='#bfc1c2', GradientType=0 );
+background: rgba(243,243,243,1);
+background: -moz-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 50%, rgba(172,172,172,1) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(243,243,243,1)), color-stop(50%, rgba(191,193,194,1)), color-stop(100%, rgba(172,172,172,1)));
+background: -webkit-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 50%, rgba(172,172,172,1) 100%);
+background: -o-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 50%, rgba(172,172,172,1) 100%);
+background: -ms-linear-gradient(top, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 50%, rgba(172,172,172,1) 100%);
+background: linear-gradient(to bottom, rgba(243,243,243,1) 0%, rgba(191,193,194,1) 50%, rgba(172,172,172,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3f3f3', endColorstr='#acacac', GradientType=0 );
+
+    		text-shadow: 1px 2px 3px #def, 0 0 0 #000, 1px 2px 3px #def;
 }
 
 .groupTable tr > th:first-child {
