--- a/tabs.css
+++ b/tabs.css
@@ -8,7 +8,7 @@
     /*----- Tab Links -----*/
     
     .tab-links {
-    	/*margin:0;*/
+    	margin-top:5px;
     	display:inline-block;
     	text-align: center;
     }
