--- a/bracket.css
+++ b/bracket.css
@@ -49,3 +49,46 @@
 	background-color:#ccffcc !important;
 	font-weight: bold;
 }
+
+/*The champion div isn't part of the table, but it looks like it is and this file is where you'd probably look for the styling*/
+.champion {
+	position:relative;
+	font-family:'Brasil2014';
+	color:red;
+	font-size:2em;
+	text-align:center;
+	display:none;
+	vertical-align: middle;
+	border:1px solid #aaa;
+	background-color:#F9F9F9;
+	width: 200px;
+	height: 200px;
+}
+
+.champion .flag {
+	position:absolute;
+	margin:auto;
+	top:0;
+	bottom:0;
+	left:0;
+	right:0;
+    box-shadow: 0px 0px 10px 5px #FFD700;
+    webkit-box-shadow: 0px 0px 10px 5px #FFD700;
+    moz-box-shadow: 0px 0px 10px 5px #FFD700;
+    ms-filter: progid:DXImageTransform.Microsoft.Glow(color=#FFD700, strength=5);
+}
+
+.champion .countryName {
+	position:absolute;
+	bottom:0;
+	left:0;
+	right:0;
+}
+
+.champion p {
+		text-shadow:1px 1px 2px #FFD700, -1px 1px 2px #FFD700, 1px -1px 2px #FFD700, -1px -1px 2px #FFD700;
+		ms-filter: progid:DXImageTransform.Microsoft.Glow(color=#FFD700, strength=1);
+		margin:0px;
+}
+
+
