--- a/buttons.css
+++ b/buttons.css
@@ -69,7 +69,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088ff', end
 	width:70px;
 }
 
-.tabbed-buttons .glossybutton {
+#row2 .glossybutton {
 	width:160px;
 	
 background: rgba(255,255,136,1);
@@ -83,7 +83,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', end
 
 }
 
-.tabbed-buttons .glossybutton::before {
+#row2 .glossybutton::before {
 	width:150px;
 }
 
@@ -149,4 +149,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ff88', end
 	-webkit-box-shadow: none;
     -moz-box-shadow: none; 
     box-shadow: none;
+}
+
+/*The buttons in row 2 change based on what tab is selected*/
+#buttons #row2 > div {
+	display:none;
 }
