--- a/buttons.css
+++ b/buttons.css
@@ -1,5 +1,20 @@
 /*buttons.css: styling for the buttons at the bottom of the page.*/
 
+/*alignment and spacing*/
+
+#buttons {
+	text-align:center;
+}
+
+#buttons > div {
+	display:table;
+	margin:auto;
+	border-collapse:separate;
+	border-spacing: 5px 2px;
+}
+
+/*The buttons themselves*/
+
 .glossybutton {
 	height:20px;
 	font-size:small;
@@ -51,18 +66,17 @@
 
 #row1 .glossybutton {
 	width:80px;
-	
-background: rgba(0,136,255,1);
-background: -moz-linear-gradient(top, rgba(0,136,255,1) 0%, rgba(0,136,255,1) 50%, rgba(62,64,149,1) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,136,255,1)), color-stop(50%, rgba(0,136,255,1)), color-stop(100%, rgba(62,64,149,1)));
-background: -webkit-linear-gradient(top, rgba(0,136,255,1) 0%, rgba(0,136,255,1) 50%, rgba(62,64,149,1) 100%);
-background: -o-linear-gradient(top, rgba(0,136,255,1) 0%, rgba(0,136,255,1) 50%, rgba(62,64,149,1) 100%);
-background: -ms-linear-gradient(top, rgba(0,136,255,1) 0%, rgba(0,136,255,1) 50%, rgba(62,64,149,1) 100%);
-background: linear-gradient(to bottom, rgba(0,136,255,1) 0%, rgba(0,136,255,1) 50%, rgba(62,64,149,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088ff', endColorstr='#0000ff', GradientType=0 );
-
     color: #fff;  
     text-shadow: 1px 1px 0px rgba(0,0,0,.5);
+	
+	background: rgba(0,136,255,1);
+	background: -moz-linear-gradient(top, rgba(0,136,255,1) 0%, rgba(0,136,255,1) 50%, rgba(62,64,149,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,136,255,1)), color-stop(50%, rgba(0,136,255,1)), color-stop(100%, rgba(62,64,149,1)));
+	background: -webkit-linear-gradient(top, rgba(0,136,255,1) 0%, rgba(0,136,255,1) 50%, rgba(62,64,149,1) 100%);
+	background: -o-linear-gradient(top, rgba(0,136,255,1) 0%, rgba(0,136,255,1) 50%, rgba(62,64,149,1) 100%);
+	background: -ms-linear-gradient(top, rgba(0,136,255,1) 0%, rgba(0,136,255,1) 50%, rgba(62,64,149,1) 100%);
+	background: linear-gradient(to bottom, rgba(0,136,255,1) 0%, rgba(0,136,255,1) 50%, rgba(62,64,149,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088ff', endColorstr='#0000ff', GradientType=0 );
 }
 
 #row1 .glossybutton::before {
@@ -72,15 +86,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088ff', end
 #row2 .glossybutton {
 	width:160px;
 	
-background: rgba(255,255,136,1);
-background: -moz-linear-gradient(top, rgba(255,255,136,1) 0%, rgba(255,255,136,1) 50%, rgba(255,204,41,1) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,136,1)), color-stop(50%, rgba(255,255,136,1)), color-stop(100%, rgba(255,204,41,1)));
-background: -webkit-linear-gradient(top, rgba(255,255,136,1) 0%, rgba(255,255,136,1) 50%, rgba(255,204,41,1) 100%);
-background: -o-linear-gradient(top, rgba(255,255,136,1) 0%, rgba(255,255,136,1) 50%, rgba(255,204,41,1) 100%);
-background: -ms-linear-gradient(top, rgba(255,255,136,1) 0%, rgba(255,255,136,1) 50%, rgba(255,204,41,1) 100%);
-background: linear-gradient(to bottom, rgba(255,255,136,1) 0%, rgba(255,255,136,1) 50%, rgba(255,204,41,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', endColorstr='#ffff00', GradientType=0 );
-
+	background: rgba(255,255,136,1);
+	background: -moz-linear-gradient(top, rgba(255,255,136,1) 0%, rgba(255,255,136,1) 50%, rgba(255,204,41,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,136,1)), color-stop(50%, rgba(255,255,136,1)), color-stop(100%, rgba(255,204,41,1)));
+	background: -webkit-linear-gradient(top, rgba(255,255,136,1) 0%, rgba(255,255,136,1) 50%, rgba(255,204,41,1) 100%);
+	background: -o-linear-gradient(top, rgba(255,255,136,1) 0%, rgba(255,255,136,1) 50%, rgba(255,204,41,1) 100%);
+	background: -ms-linear-gradient(top, rgba(255,255,136,1) 0%, rgba(255,255,136,1) 50%, rgba(255,204,41,1) 100%);
+	background: linear-gradient(to bottom, rgba(255,255,136,1) 0%, rgba(255,255,136,1) 50%, rgba(255,204,41,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', endColorstr='#ffff00', GradientType=0 );
 }
 
 #row2 .glossybutton::before {
@@ -90,15 +103,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', end
 #row3 .glossybutton {
 	width:190px;
 	
-background: rgba(0,255,136,1);
-background: -moz-linear-gradient(top, rgba(0,255,136,1) 0%, rgba(0,255,136,1) 50%, rgba(0,168,89,1) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,255,136,1)), color-stop(50%, rgba(0,255,136,1)), color-stop(100%, rgba(0,168,89,1)));
-background: -webkit-linear-gradient(top, rgba(0,255,136,1) 0%, rgba(0,255,136,1) 50%, rgba(0,168,89,1) 100%);
-background: -o-linear-gradient(top, rgba(0,255,136,1) 0%, rgba(0,255,136,1) 50%, rgba(0,168,89,1) 100%);
-background: -ms-linear-gradient(top, rgba(0,255,136,1) 0%, rgba(0,255,136,1) 50%, rgba(0,168,89,1) 100%);
-background: linear-gradient(to bottom, rgba(0,255,136,1) 0%, rgba(0,255,136,1) 50%, rgba(0,168,89,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ff88', endColorstr='#00a859', GradientType=0 );
-
+	background: rgba(0,255,136,1);
+	background: -moz-linear-gradient(top, rgba(0,255,136,1) 0%, rgba(0,255,136,1) 50%, rgba(0,168,89,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,255,136,1)), color-stop(50%, rgba(0,255,136,1)), color-stop(100%, rgba(0,168,89,1)));
+	background: -webkit-linear-gradient(top, rgba(0,255,136,1) 0%, rgba(0,255,136,1) 50%, rgba(0,168,89,1) 100%);
+	background: -o-linear-gradient(top, rgba(0,255,136,1) 0%, rgba(0,255,136,1) 50%, rgba(0,168,89,1) 100%);
+	background: -ms-linear-gradient(top, rgba(0,255,136,1) 0%, rgba(0,255,136,1) 50%, rgba(0,168,89,1) 100%);
+	background: linear-gradient(to bottom, rgba(0,255,136,1) 0%, rgba(0,255,136,1) 50%, rgba(0,168,89,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ff88', endColorstr='#00a859', GradientType=0 );
 }
 
 #row3 .glossybutton::before {
