adding text shadow to match details so they stand out against if scrolled over colored background

--- a/world_cup.css
+++ b/world_cup.css
@@ -108,6 +108,11 @@ hr {
     color: #333333;
     font-family: Georgia, serif;
     font-size: small;
+    text-shadow:
+        -1px -1px 0 #fff,
+        1px -1px 0 #fff,
+        -1px 1px 0 #fff,
+        1px 1px 0 #fff;  
 }
 
 .details::after {
